--- a/.config/hypr/shortcuts.conf
+++ b/.config/hypr/shortcuts.conf
@@ -1,14 +1,15 @@
 # Program used vars
   $terminal = alacritty
-  $fileManager = thunar
-  $menu = wofi --show drun
+  $fileManager = nemo
+  $menu = rofi -show drun
   $waybar = killall waybar && waybar
-  $browser = firefox
+  $browser = brave
+  # $browser = firefox
 
 # Program shortcuts
   bind = $mainMod SHIFT, Q, killactive, 
-  bind = $mainMod , RETURN, exec, $terminal -e zsh
-  bind = $mainMod , R, exec, $terminal -e ranger
+  bind = $mainMod , RETURN, exec, $terminal
+  bind = $mainMod , R, exec, $terminal -e yazi
   bind = $mainMod , V, exec, $terminal -e nvim
   bind = $mainMod , 0, exit, 
   bind = $mainMod , N, exec, $fileManager
@@ -17,4 +18,4 @@
   bind = $mainMod  , S, togglefloating, 
   bind = $mainMod  , P, exec, $waybar
   bind = $mainMod  , F, fullscreen
-  bindr = $mainMod , D, exec, pkill wofi || $menu
+  bindr = $mainMod , D, exec, pkill rofi || $menu
