--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -7,7 +7,7 @@ print_info() {
     info "\e[33m " kernel
     info "\e[34m " uptime
     info "\e[35m " packages
-    info "\e[36m " wm
+    info "\e[36m " de
     info "\e[32m " term
     info "\e[33m " shell
     info "\e[34m󰒇 " memory
@@ -67,7 +67,7 @@ print_info() {
     gtk_shorthand="on"
     image_backend="ascii"
     image_source="auto"
-    ascii_distro="fedora_small"
+    ascii_distro="arch_small"
     ascii_colors=(distro)
     ascii_bold="on"
     image_loop="off"
