--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-import = ["~/.config/alacritty/rose-pine.toml"]
 
 [font]
 size = 14
@@ -7,8 +6,11 @@ size = 14
 family = "CaskaydiaCove Nerd Font"
 
 [window]
-opacity = 0.94
-# opacity = 1
+# opacity = 0.94
+opacity = 1
 padding.x = 12
 padding.y = 12
+
+[general]
+import = ["~/.config/alacritty/rose-pine.toml"]
 
