--- a/.config/cava/config
+++ b/.config/cava/config
@@ -1,8 +1,8 @@
 [output]
-method = ncurses
+method = noncurses
 
 [color]
-background = '#191724'
+#background = '#191724'
 gradient = 1
 gradient_count = 6
 gradient_color_1 = '#31748f'
