--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,14 +1,17 @@
 [Settings]
 gtk-theme-name=Rosepine-Dark
-gtk-icon-theme-name=HighContrast
-gtk-font-name=Sans 10
-gtk-cursor-theme-size=0
+gtk-icon-theme-name=Tela-circle-dark
+gtk-font-name=Cantarell 13
+gtk-cursor-theme-name=BreezeX-RosePine-Linux
+gtk-cursor-theme-size=36
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=1
 gtk-menu-images=1
 gtk-enable-event-sounds=1
-gtk-enable-input-feedback-sounds=1
+gtk-enable-input-feedback-sounds=0
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintfull
+gtk-xft-rgba=rgb
+gtk-application-prefer-dark-theme=0
