--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -14,14 +14,18 @@
 
 # Startup services
    exec-once = waybar
+   exec-once = wl-clipboard
+   exec = brightnessctl s 75%
+   exec-once = blueman-applet
    exec-once = swaybg -i ~/Pictures/walls/smoking.png
-
+   exec-once=hyprctl setcursor BreezeX-RosePine-Linux 36
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us
+    kb_layout = us, ru
     kb_variant =
     kb_model =
-    kb_options = caps:escape
+    # kb_options = caps:escape, grp:alt_space_toggle
+    kb_options = caps:ctrl, grp:alt_space_toggle
     kb_rules =
     repeat_delay = 320
     repeat_rate = 40
@@ -32,7 +36,7 @@ input {
         natural_scroll = no
     }
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0.1 # -1.0 - 1.0, 0 means no modification.
 }
 
 # General options for windows
@@ -52,19 +56,19 @@ decoration {
     rounding = 8
     
     blur {
-        enabled = true
+        enabled = false
         size = 3
         passes = 1
     }
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    # drop_shadow = no
+    # shadow_range = 4
+    # shadow_render_power = 3
+    # col.shadow = rgba(1a1a1aee)
 }
 
 animations {
-    enabled = yes
+    enabled = 1
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -85,10 +89,6 @@ dwindle {
     force_split = 2
 }
 
-master {
-    new_is_master = false
-}
-
 gestures {
     workspace_swipe = off
 }
@@ -100,7 +100,4 @@ misc {
 device:epic-mouse-v1 {
 #    sensitivity = -0.5
 }
-
-# Windowrule
-#windowrulev2 = nomaximizerequest, class:.* 
 
